crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__for__scope.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/for/scope.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (block
      (var i @1 "before")
      (for
         (var i @2 0.0)
         (< (local i @2) 1.0)
         (= (local i @2) (+ (local i @2) 1.0))
         (block
            (print (local i @2))
            (var i @3 (- 1.0))
            (print (local i @3)))))
   (block
      (for
         (var i @1 0.0)
         (> (local i @1) 0.0)
         (= (local i @1) (+ (local i @1) 1.0))
         (block))
      (var i @1 "after")
      (print (local i @1))
      (for
         (expr (= (local i @1) 0.0))
         (< (local i @1) 1.0)
         (= (local i @1) (+ (local i @1) 1.0))
         (block
            (print (local i @1))))))

----- stderr -----
