crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__for__syntax.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/for/syntax.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (for
      (var c @1 0.0)
      (< (local c @1) 3.0)
      ∅
      (print (= (local c @1) (+ (local c @1) 1.0))))
   (for
      (var a @1 0.0)
      (< (local a @1) 3.0)
      (= (local a @1) (+ (local a @1) 1.0))
      (block
         (print (local a @1))))
   (fun foo @1 []
      (block
         (for
            ∅
            ∅
            ∅
            (return "done"))))
   (print (call +2 (local foo @1)))
   (var i @2 0.0)
   (for
      ∅
      (< (local i @2) 2.0)
      (= (local i @2) (+ (local i @2) 1.0))
      (print (local i @2)))
   (fun bar @3 []
      (block
         (for
            (var i @0 0.0)
            ∅
            (= (local i @0) (+ (local i @0) 1.0))
            (block
               (print (local i @0))
               (if
                  (>= (local i @0) 2.0)
                  (return ∅)
                  ∅)))))
   (expr (call +4 (local bar @3)))
   (for
      (var i @4 0.0)
      (< (local i @4) 2.0)
      ∅
      (block
         (print (local i @4))
         (expr (= (local i @4) (+ (local i @4) 1.0)))))
   (for
      ∅
      false
      ∅
      (if
         true
         (expr 1.0)
         (expr 2.0)))
   (for
      ∅
      false
      ∅
      (while
         true
         (expr 1.0)))
   (for
      ∅
      false
      ∅
      (for
         ∅
         ∅
         ∅
         (expr 1.0))))

----- stderr -----
